--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.4",
     "html2pdf.js": "^0.10.2",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
+    "tailwindcss": "^4.1.2",
     "vite": "^6.0.3"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
