--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "sass": "^1.85.0"
+    "sass": "^1.85.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
